; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/fault/extr_gp100.c_gp100_fault_buffer_info.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/fault/extr_gp100.c_gp100_fault_buffer_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_fault_buffer = type { i32, i32, %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvkm_fault_buffer*)* @gp100_fault_buffer_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gp100_fault_buffer_info(%struct.nvkm_fault_buffer* %0) #0 {
  %2 = alloca %struct.nvkm_fault_buffer*, align 8
  store %struct.nvkm_fault_buffer* %0, %struct.nvkm_fault_buffer** %2, align 8
  %3 = load %struct.nvkm_fault_buffer*, %struct.nvkm_fault_buffer** %2, align 8
  %4 = getelementptr inbounds %struct.nvkm_fault_buffer, %struct.nvkm_fault_buffer* %3, i32 0, i32 2
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @nvkm_rd32(i32 %8, i32 10872)
  %10 = load %struct.nvkm_fault_buffer*, %struct.nvkm_fault_buffer** %2, align 8
  %11 = getelementptr inbounds %struct.nvkm_fault_buffer, %struct.nvkm_fault_buffer* %10, i32 0, i32 3
  store i32 %9, i32* %11, align 8
  %12 = load %struct.nvkm_fault_buffer*, %struct.nvkm_fault_buffer** %2, align 8
  %13 = getelementptr inbounds %struct.nvkm_fault_buffer, %struct.nvkm_fault_buffer* %12, i32 0, i32 0
  store i32 10876, i32* %13, align 8
  %14 = load %struct.nvkm_fault_buffer*, %struct.nvkm_fault_buffer** %2, align 8
  %15 = getelementptr inbounds %struct.nvkm_fault_buffer, %struct.nvkm_fault_buffer* %14, i32 0, i32 1
  store i32 10880, i32* %15, align 4
  ret void
}

declare dso_local i32 @nvkm_rd32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
